2009-07-04  Christopher Faylor  <me+cygwin@cgf.cx>

	* cygwin-console-helper.cc: New file.

2009-06-10  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (oopts): Sort alphabetically, add missing "auto" and
	"override" entries.
	(from_fstab_line): Handle mount points same as Cygwin itself.  Use
	"cygdrive prefix" as posix name of cygdrive prefix.
	(from_fstab): Add auto entries for /usr/bin and /usr/lib.  Add
	MOUNT_AUTOMATIC and MOUNT_IMMUTABLE flags to default root dir entry.
	Use "cygdrive prefix" as posix name of default cygdrive prefix.
	(getmntent): Allocate smaller buffers.  Align output closer to output
	of mount(1).

2009-05-17  Corinna Vinschen  <corinna@vinschen.de>

	* cygpath.cc (codepage): New variable.
	(long_options): Add --codepage option.
	(options): Add -C option.
	(usage): Add -C/--codepage description.
	(my_wcstombs): New function.  Use througout instead of wcstombs.
	(do_options): Handle -C/--codepage option.
	* utils.sgml (cygpath): Add description for new -C/--codepage option.

2009-05-16  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (cygpath.exe): Link against cygwin.a before linking
	against ntdll.dll to avoid linking symbols defined in both DLLs
	from ntdll.
	(ps.exe): Ditto.

2009-05-15  Corinna Vinschen  <corinna@vinschen.de>

	* cygpath.cc (main): Only setlocale for LC_CTYPE category.  Fallback
	to UTF-8 if locale is "C".
	* ldd.cc (main): Ditto.
	* mkgroup.c (main): Ditto.
	* mkpasswd.c (main): Ditto.
	* passwd.c (main): Ditto.

2009-05-13  Corinna Vinschen  <corinna@vinschen.de>
	    Christopher Faylor  <me+cygwin@cgf.cx>

	* mount.cc (oopts): Sort.  Add override option.  Add dummy "auto"
	option for consistency.
	(mount_entries): Avoid adding auto-mounted entries to -m output.

	* utils.sgml: Sort mount options.  Add description of override option.

2009-05-11  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in: Link ps.exe agains ntdll.dll.
	* ps.cc (main): Enable SE_DEBUG_NAME privilege if Windows processes