@@ -1,3 +1,7 @@
+2009-07-13  Corinna Vinschen  <corinna@vinschen.de>
+
+	* cygcheck.cc (dump_sysinfo): Remove "not yet supported" text.
+
 2009-07-04  Christopher Faylor  <me+cygwin@cgf.cx>
 
 	* cygwin-console-helper.cc: New file.
